<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 CMPUT301W17T12
  ~ Authors rsauveho vuk bfleyshe henrywei cs3
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Project Attitude</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Main Activity strings -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to mainActivity and menus-->
    <string name="main_title">Moods</string>
    <string name="search_bar">Search (in trigger)</string>

    <!-- Strings related to top right menu-->
    <string name="map_option">Map</string>
    <string name="profile_option">Profile</string>
    <string name="logout_option">Logout</string>
    <string name="title_activity_map">Map</string>

    <!-- Strings related to sort menu -->
    <string name="sort_menu">Sort</string>
    <string name="date_option">Date</string>
    <string name="reverse_date_option">Reverse Date</string>

    <!-- Strings related to filter menu-->
    <string name="filter_menu">Filter</string>
    <string name="time_option">Time</string>
    <string name="following_option">Following</string>
    <string name="emotion_option">Emotions</string>
    <string name="all_option">All Moods</string>

    <!-- Strings related to filter by time menu-->
    <string name="day_option">Day</string>
    <string name="week_option">Week</string>
    <string name="month_option">Month</string>
    <string name="year_option">Year</string>

    <!-- Strings related to filter by emotion menu-->
    <string name="anger_option">Anger</string>
    <string name="confusion_option">Confusion</string>
    <string name="disgust_option">Disgust</string>
    <string name="fear_option">Fear</string>
    <string name="happiness_option">Happiness</string>
    <string name="sadness_option">Sadness</string>
    <string name="shame_option">Shame</string>
    <string name="surprise_option">Surprise</string>


    <string-array name="social_situations">
        <item>Select a social situation</item>
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>
    <string name="spinner">Social Situations</string>
    <!-- Strings related to MainActivity-->
    <string name="mood_text">Moods</string>

    <!-- Strings related to CreateAccountActivity-->
    <string name="complete_button">Complete</string>
    <string name="emotional_state">Emotional State</string>

    <!-- Strings for create mood activity -->
    <string name="mood_label">Mood:</string>
    <string name="date_label">Date:</string>
    <string name="emotional_state_label">Emotional State:</string>
    <string name="trigger_label">Trigger:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="emotion_state_error">Emotional state is a mandatory field</string>
    <string name="social_situation_label">Social Situation:</string>
    <string name="save_location">Location</string>
    <string name="display_location">Lat: %1$d Long %2$d:</string>

    <string-array name="emotional_state">
        <item>Select an emotional state</item>
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>
    <string name="emotionSpinner">Emotional State</string>

    <!-- Strings for MoodMainAdapter -->
    <string name="trigger_prefix">Reason: %1$s</string>
    <string name="social_situation_prefix">Situation: %1$s</string>

    <!-- Strings for Google map activity -->
    <string name="google_maps_key">AIzaSyCvXpLfGeIYr7BAMHg3GD9hYxU0izDRA</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
