<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 CMPUT301W17T12
  ~ Authors rsauveho vuk bfleyshe henrywei cs3
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_mood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectattitude.projectattitude.Activities.EditMoodActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/mood_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moodLabel"
                android:labelFor="@+id/moodField"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/moodField"/>

            <TextView
                android:text="@string/date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateLabel"
                android:labelFor="@+id/dateField"/>

            <EditText
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:hint="Select Date..." />

            <TextView
                android:text="@string/emotional_state_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emotionalStateLabel"
                android:labelFor="@+id/emotionalStateField"/>

            <Spinner
                android:id="@+id/emotionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/emotional_state"
                android:prompt="@string/emotionSpinner"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <TextView
                android:text="@string/trigger_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/triggerLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/triggerField"/>

            <TextView
                android:id="@+id/socialSituationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_situation_label" />

            <Spinner
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/social_situations"
                android:prompt="@string/spinner"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quantum_ic_art_track_grey600_48"
                android:id="@+id/imageView" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_location" />

            <Button
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_weight=".05"/>

            <Button
                android:text="@string/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
