<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_mood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectattitude.projectattitude.Activities.CreateMoodActivity"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.76">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/dateField"
                android:text="@string/date_label" />

            <EditText
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Select Date..."
                android:inputType="date" />

            <TextView
                android:id="@+id/emotionalStateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/emotionalStateField"
                android:text="@string/emotional_state_label" />

            <Spinner
                android:id="@+id/emotionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/emotional_state"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:prompt="@string/emotionSpinner" />

            <TextView
                android:id="@+id/triggerLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_label" />

            <EditText
                android:id="@+id/triggerField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/socialSituationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_situation_label" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/social_situations"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:prompt="@string/spinner" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                app:srcCompat="@drawable/quantum_ic_art_track_grey600_48" />

            <!--<CheckBox-->
            <!--android:id="@+id/saveLocation"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/save_location" />-->

            <Button
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Photo" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button" />

            <!--<Button-->
            <!--android:id="@+id/cancelButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/cancel_button" />-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>
